# rusticated

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  Cargo.toml  DARWY.md  GOGUEST.md  LICENSE  LINUX-STD.md  MOHABBAT-GO.md  MOHABBAT.md  README.md  STD-FIX-1.md  STD-FIX.md  STD-REAL-FIX.md  WASHMHOST-integration.md  WASHMHOST-testing.md  a.out  build.rs  cargo-err.txt  errors.txt  fast_std_demo.txt  fix_write.py  index.html  main.go  mohabbat-refact.md  patch.py  patch.txt  patch_demo.py  rust-lld-help.txt  sysroot.toml  test.c  test.rs  test2.c
.cargo/: config.toml
brot/: Cargo.toml  build.rs
brot-go/: go.mod  go.sum  load_windows.go  main.go  meta.go  pool.go
brot/.cargo/: config.toml
brot/src/: allocator.rs  darwin.rs  decompress.rs  linux.rs  load_win.rs  main.rs  temp_check.rs  test_symbols.rs  win32.rs  windows.rs
demo/: Cargo.toml  patch2.py  rusticated-target.json
demo-go/: go.mod  main.go
demo-go/trivial/: go.mod  main.go
demo/.cargo/: config.toml
demo/loch/: Cargo.toml  test.rs
demo/loch/.cargo/: config.toml
demo/loch/src/: app.rs  events.rs  main.rs  truant.rs  ui.rs
demo/src/: main.rs
empty/: Cargo.toml
empty/src/: lib.rs
harness/: index.js  package-lock.json  package.json
kabibi/: Cargo.toml
kabibi-go/: ai_native.go  ai_sidecar.go  ai_wasm.go  assets.go  go.mod  go.sum  main.go  model.go  run.go  shell.go  styles.go  types.go  update.go  view.go  writer.go
kabibi-go/.deps/: Cargo.toml
kabibi-go/sidecar/: Cargo.toml
kabibi-go/sidecar/src/: main.rs
kabibi/.cargo/: config.toml
kabibi/docs/: brush-integration.md
kabibi/src/: app.rs  main.rs  truant.rs
mohabbat/: Cargo.toml  build.go  build.rs  build_go_project.go  build_node.go  build_rust_project.go  build_test.go  go.mod  main.go  package.go  patch_go_deps.go  patch_go_deps_test.go  patch_regast.go  prebuild.go  refill.go  run.go  sdk.go  sdk_test.go  types.go  util.go  util_test.go  wasm_postprocess.go
mohabbat-go/: build.go  build_go_project.go  go.mod  go.sum  main.go  out.txt  prebuild.go  refill.go  sdk.go  util.go  wasm_postprocess.go
mohabbat/.cargo/: config.toml
mohabbat/brot/: Cargo.toml
mohabbat/brot/.cargo/: config.toml
mohabbat/brot/js/node/: starter.js
mohabbat/brot/src/: allocator.rs  darwin.rs  lib.rs  linux.rs  load_win.rs  main.rs  windows.rs
mohabbat/regast/: README.md  exec.go  lower.go  preprocess.go  regast.go  regast_test.go
mohabbat/regast-poc/: exec.go  lower.go  preprocess.go  regast.go  regast_test.go
mohabbat/src/: logic.rs  main.rs
mohabbat/testdata/dummy-go/: go.mod  main.go
mohabbat/testdata/dummy-rust/: Cargo.toml
mohabbat/testdata/dummy-rust/src/: main.rs
mohabbat/washmhost/: cshared_darwin.go  debug-run.go  env_fs.go  env_fs_utils_test.go  env_impl.go  env_os.go  env_os_timer_test.go  env_proc.go  env_utils.go  go.mod  log.go  log_verbose.go  main.go  rusticated_demo.txt
mohabbat/washmhost/js/node/: index.js  index.test.js
node-host/: index.js  package-lock.json  package.json
overlay-go/internal/filepathlite/: path_nonwindows.go
overlay-go/internal/syscall/unix/: at_rusticated.go  fcntl_rusticated.go  nonblocking_rusticated.go
overlay-go/os/: path_unix.go
overlay-go/runtime/: asm_rusticated.s  lock_rusticated.go  netpoll_rusticated.go  os_rusticated.go  pause_rusticated.go  rt0_wasip1_wasm.s  stubs_rusticated.go
overlay-go/syscall/: fs_rusticated.go  net_rusticated.go  os_rusticated.go  syscall_rusticated.go
peb-test/: Cargo.toml
peb-test/src/: main.rs
prebuild/: Cargo.toml
prebuild/.cargo/: config.toml
prebuild/src/: main.rs
rusticated-go/internal/filepathlite/: go.mod
rusticated-go/internal/syscall/unix/: fcntl_rusticated.go  net_rusticated.go  nonblocking_rusticated.go  utimes_rusticated.go
rusticated-go/os/: exec_rusticated.go  path_unix.go  pipe_rusticated.go
rusticated-go/runtime/: lock_rusticated.go  os_rusticated.go  stubs_rusticated.go
rusticated-go/syscall/: fs_rusticated.go  log_rusticated.go  log_rusticated_verbose.go  os_rusticated.go  syscall_rusticated.go
rusticated-rust/: Cargo.toml
rusticated-rust/src/: abi.rs  allocator.rs  error.rs  io.rs  lib_intrinsics.rs  net.rs  os.rs  path.rs  signal.rs  sync.rs  thread.rs  time.rs  traits.rs  tty.rs
rusticated-rust/src/os/linux/: mod.rs  syscall.rs
rusticated-rust/src/rt/: blocking.rs  bsd.rs  linux_driver.rs  linux_op.rs  linux_state.rs  linux_uring.rs  ready.rs  timers.rs  waker.rs
src/: Cargo.toml  abi.rs  allocator.rs  backtrace.rs  collections.rs  env.rs  error.rs  ffi.rs  fs.rs  io.rs  lib.rs  lib_intrinsics.rs  mock.rs  msvc_stubs.rs  net.rs  os.rs  path.rs  process.rs  signal.rs  std.rs  sync.rs  thread.rs  time.rs  traits.rs  tty.rs
src/os/linux/: syscall.rs
src/rt/: blocking.rs  bsd.rs  executor.rs  linux_driver.rs  linux_epoll.rs  linux_op.rs  linux_state.rs  linux_uring.rs  mod.rs  native.rs  ready.rs  select.rs  timers.rs  waker.rs  wasm.rs  windows.rs
test_sizeof/: Cargo.toml
test_sizeof/src/: main.rs
washmhost/: Cargo.toml  build.rs  debug-run.go  env_fs.go  env_fs_dir_test.go  env_fs_io_test.go  env_fs_test.go  env_misc_test.go  env_proc.go  env_proc_test.go  mock_test.go  runtime.go
washmhost-go/: cshared_darwin.go  debug-run.go  env_fs.go  env_fs_dir_test.go  env_impl.go  env_init_test.go  env_net.go  env_net_test.go  env_ops_lifecycle_test.go  env_os.go  env_os_exhaustive_test.go  env_proc.go  env_utils.go  go.mod  go.sum  main.go  runtime.go
washmhost/.cargo/: config.toml
washmhost/src/: env_impl.rs  handles.rs  lib.rs  main.rs
wasmhost/: Cargo.toml
wasmhost/src/: handles.rs  main.rs
wasmtime-host/src/: env_impl.rs
xtask/: Cargo.toml
