[workspace]
members = ["demo", "washmhost", "brot", "mohabbat", "demo/loch", "kabibi", "prebuild"]

[patch.crates-io]
# Shim that translates custom `*-rusticated` target names to their standard
# equivalents before target-lexicon's build script tries to parse them.
# Without this, target-lexicon (used by wasmtime) panics when TARGET is set
# to e.g. `aarch64-windows-rusticated`.
target-lexicon = { path = "washmhost/vendor/target-lexicon" }


[workspace.package]
edition = "2024"
license = "MIT"
readme = "README.md"
repository = "https://github.com/mavity/rusticated"
rust-version = "1.88.0"
homepage = "https://github.com/mavity/rustic"
documentation = "https://docs.rs/rustic"
license-file = "LICENSE"

[workspace.lints.rust]
warnings = { level = "deny" }
future_incompatible = { level = "deny" }
missing_docs = { level = "deny" }
nonstandard_style = { level = "deny" }
rust_2018_idioms = { level = "deny", priority = -1 }
unsafe_op_in_unsafe_fn = "deny"
unknown_lints = { level = "allow", priority = -100 }
# rusticated intentionally uses native `async fn` in traits (no async-trait crate).
async_fn_in_trait = { level = "allow", priority = 1 }

[workspace.lints.rustdoc]
all = { level = "deny", priority = -1 }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = "fat"
codegen-units = 1
opt-level = "z"
debug = 2

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
expect_used = "deny"
panic = "deny"
panic_in_result_fn = "deny"
todo = "deny"
unwrap_in_result = "deny"
unwrap_used = "deny"
undocumented_unsafe_blocks = "deny"
bool_to_int_with_if = "allow"
cognitive_complexity = "allow"
collapsible_else_if = "allow"
collapsible_if = "allow"
future_not_send = "allow"
if_not_else = "allow"
if_same_then_else = "allow"
match_same_arms = "allow"
missing_errors_doc = "allow"
must_use_candidate = "allow"
multiple_crate_versions = "allow"
option_if_let_else = "allow"
redundant_closure_for_method_calls = "allow"
redundant_else = "allow"
redundant_pub_crate = "allow"
result_large_err = "allow"
similar_names = "allow"
struct_excessive_bools = "allow"

[package]
name = "rusticated"
description = "Fast, standard-library-shaped async platform layer for brush-async"
version = "0.1.2"
categories = ["asynchronous", "development-tools", "embedded"]
edition.workspace = true
keywords = ["async", "io", "embedded", "runtime", "wasm"]
license.workspace = true
readme.workspace = true
repository.workspace = true
documentation = "https://docs.rs/rusticated"
rust-version.workspace = true

[lib]
name = "std"
bench = false

[lints]
workspace = true

[features]
# Opt-in: allow the host to spawn OS threads explicitly. rusticated itself never
# spawns threads — this flag merely promises that doing so is acceptable on
# the target platform. Never available on WASM.
threads = []

[dependencies]
backtrace = { version = "0.3", default-features = false }
dlmalloc = { version = "0.2", features = ["global"] }
spin = { version = "0.12", default-features = false, features = ["mutex", "spin_mutex", "rwlock", "once", "lazylock"] }
hashbrown = { version = "0.14", default-features = false, features = ["ahash", "allocator-api2"] }
ahash = { version = "0.8", default-features = false }
concurrent-queue = { version = "2.5", default-features = false }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2.10", default-features = false, features = ["custom"] }

[target."cfg(windows)".dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_Networking_WinSock", "Win32_System_IO", "Win32_Foundation", "Win32_System_Threading", "Win32_Security", "Win32_System_SystemServices", "Win32_System_WindowsProgramming", "Win32_Storage_FileSystem", "Win32_System_Environment", "Win32_System_Console"] }
windows-link = "0.2.1"
