[workspace]
members = ["rusticated-rust", "demo", "mohabbat/brot", "demo/loch", "kabibi"]
resolver = "3"


[workspace.package]
version = "0.1.2"
edition = "2024"
license = "MIT"
readme = "README.md"
repository = "https://github.com/mavity/rusticated"
rust-version = "1.88.0"
homepage = "https://github.com/mavity/rustic"
documentation = "https://docs.rs/rustic"
license-file = "LICENSE"

[workspace.lints.rust]
warnings = { level = "deny" }
future_incompatible = { level = "deny" }
missing_docs = { level = "deny" }
nonstandard_style = { level = "deny" }
rust_2018_idioms = { level = "deny", priority = -1 }
unsafe_op_in_unsafe_fn = "deny"
unknown_lints = { level = "allow", priority = -100 }
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(rusticated_linux)"] }
# rusticated intentionally uses native `async fn` in traits (no async-trait crate).
async_fn_in_trait = { level = "allow", priority = 1 }

[workspace.lints.rustdoc]
all = { level = "deny", priority = -1 }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = "fat"
codegen-units = 1
opt-level = "z"
debug = 0
strip = "symbols"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
expect_used = "deny"
panic = "deny"
panic_in_result_fn = "deny"
todo = "deny"
unwrap_in_result = "deny"
unwrap_used = "deny"
undocumented_unsafe_blocks = "deny"
bool_to_int_with_if = "allow"
cognitive_complexity = "allow"
collapsible_else_if = "allow"
collapsible_if = "allow"
future_not_send = "allow"
if_not_else = "allow"
if_same_then_else = "allow"
match_same_arms = "allow"
missing_errors_doc = "allow"
must_use_candidate = "allow"
multiple_crate_versions = "allow"
option_if_let_else = "allow"
redundant_closure_for_method_calls = "allow"
redundant_else = "allow"
redundant_pub_crate = "allow"
result_large_err = "allow"
similar_names = "allow"
struct_excessive_bools = "allow"

