[package]
name = "mohabbat"
version = "0.1.0"
edition = "2024"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
anyhow = "1.0.102"
brotli = "8.0.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
anyhow = { version = "1.0.102", default-features = false }
brotli = { version = "8.0.2", default-features = false, features = ["alloc-stdlib"] }
std = { package = "rusticated", path = "..", default-features = false, features = ["panic-handler"] }

[build-dependencies]
anyhow = "1.0.102"
brotli = "8.0.2"
