[package]
name = "peb-test"
version = "0.1.0"
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
homepage.workspace = true
documentation.workspace = true
license-file.workspace = true

[dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_System_Threading", "Win32_System_Environment", "Win32_Foundation", "Win32_System_Diagnostics_Debug"] }

[lints]
workspace = true
