[package]
name = "sysroot"
description = "Core sysroot implementation for rusticated — the no_std std-shaped library."
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[lib]
name = "sysroot"
path = "lib.rs"
bench = false

[lints]
workspace = true

[features]
# Opt-in: allow the host to spawn OS threads explicitly. rusticated itself never
# spawns threads — this flag merely promises that doing so is acceptable on
# the target platform. Never available on WASM.
threads = []

[dependencies]
dlmalloc = { version = "0.2", features = ["global"] }
spin = { version = "0.9.8", default-features = false, features = ["mutex", "spin_mutex", "rwlock", "once", "lazy"] }
hashbrown = { version = "0.14", default-features = false, features = ["ahash", "allocator-api2"] }
ahash = { version = "0.8", default-features = false }
concurrent-queue = { version = "2.5", default-features = false }

[target.'cfg(target_family = "wasm")'.dependencies]
getrandom = { version = "0.2", features = ["custom"] }
