[package]
name = "washmhost"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]

wasmtime = { version = "26", default-features = false, features = ["runtime", "pulley"] }
anyhow = { version = "1", default-features = false }
libc = "0.2"
polling = "3.11.0"


